--- a/index.html
+++ b/index.html
@@ -46,19 +46,20 @@
         <h3 class="intro2">LET'S CONNECT</h3>
         <ul class="social">
             <li class="social-icon twitter">
-                <a><img src="images/twitter.png" alt="twitter"></a>
+                
+                <a href="#"><img src="images/twitter.png" alt="twitter"></a>
             </li>
             <li class="social-icon linkedin">
-                <a><img src="images/Linkedin.png" alt="linkedin"></a>
+                <a href="#"><img src="images/Linkedin.png" alt="linkedin"></a>
             </li>
             <li class="social-icon">
-                <a><img src="images/m.png" alt="m"></a>
+                <a href="#"><img src="images/m.png" alt="m"></a> <a href="http://"></a>
             </li>
             <li class="social-icon github">
-                <a><img src="images/github.png" alt="github"></a>
+                <a href="#"><img src="images/github.png" alt="github"></a>
             </li>
             <li class="social-icon fingers">
-                <a><img src="images/fingers.png" alt="fingers"></a>
+                <a href="#"><img src="images/fingers.png" alt="fingers"></a>
             </li>
         </ul>
     </section>
