social-networks-link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="#"><img src="images/Linkedin.png" alt="linkedin"></a>
             </li>
             <li class="social-icon">
-                <a href="#"><img src="images/m.png" alt="m"></a> <a href="http://"></a>
+                <a href="#"><img src="images/m.png" alt="m"></a> 
             </li>
             <li class="social-icon github">
                 <a href="#"><img src="images/github.png" alt="github"></a>
